@@ -1,3 +1,15 @@
+2005-08-30  Richard Henderson  <rth@redhat.com>
+
+	* loop.c (GOMP_loop_static_start): Provide fallback wrapper
+	function for when aliases are not usable.
+	(GOMP_loop_dynamic_start, GOMP_loop_guided_start,
+	GOMP_loop_ordered_static_start, GOMP_loop_ordered_dynamic_start,
+	GOMP_loop_ordered_guided_start, GOMP_loop_static_next,
+	GOMP_loop_dynamic_next, GOMP_loop_guided_next,
+	GOMP_loop_ordered_static_next, GOMP_loop_ordered_dynamic_next,
+	GOMP_loop_ordered_guided_next): Likewise.
+	* ordered.c (GOMP_ordered_start): Likewise.
+
 2005-08-01  Diego Novillo  <dnovillo@redhat.com>
 
 	* testsuite/libgomp.dg/dg.exp: Use -O2 for now.
